--- a/_pages/dept/solid_waste/home.html
+++ b/_pages/dept/solid_waste/home.html
@@ -10,6 +10,8 @@ news: true
 
 		<!-- Department Description -->
 		<div class="col-md-12">
+			<div class="alert alert-danger" role="alert">This site concerns RURAL county residences only. For assistance with a residence inside a city limit please call City Hall.
+			</div>
 			<div class="panel panel-default">
 				<p class="panel-body">
 					Under the supervision of the County Commissioners the Solid Waste office sets fees and negotiates contracts with government and private entities. Billing procedures and collection of fees are managed by the Solid Waste Department. We strive to resolve problems incurred by ratepayers with payments or with any of the services included.<br><br>
@@ -45,8 +47,6 @@ news: true
 		</div>
 
 		<div class="col-md-12">
-			<div class="alert alert-danger" role="alert">This site concerns RURAL county residences only. For assistance with a residence inside a city limit please call City Hall.
-			</div>
 
 			<div class="panel panel-default" >
 				<div class="panel-heading">
@@ -117,11 +117,11 @@ news: true
 				<h4 class=" text-center">Solid Waste Forms and Files</h4>
 			</div>
 			<div class="list-group">
-				<div id="swDir" class="list-group-item"></div>
+				<div id="swDir"></div>
 			</div>
 			<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
 				<div class="list-group pre-scrollable" id="forms">
-					<div id="forms"></div>
+					<div id="forms" class="list-group-item"></div>
 					<noscript>To view forms please enable JavaScript or update your browser</noscript>
 				</div>
 			</div>
