--- a/_pages/dept/solid_waste/onlinepayments.html
+++ b/_pages/dept/solid_waste/onlinepayments.html
@@ -2,11 +2,11 @@
 permalink: /solid_waste/onlinepayments
 ---
 
-    <div class="panel panel-default" >      
+    <div class="panel panel-default" >
       <div class="panel-body">
         <p>
           Latah County contracts with Point & Pay for online payments. Point and Pay charges a service fee of 2.5 percent or $1.50 whichever is greater. To proceed please click this link:
-          <a href="https://client.pointandpay.net/web/LatahCountySolidWasteID">Point and Pay</a>
+          <a href="https://client.pointandpay.net/web/LatahCountySolidWasteID" target="_blank" rel="noopener">Point and Pay</a>
         </p>
       </div>
     </div>
