--- a/_pages/dept/weed_control/home.html
+++ b/_pages/dept/weed_control/home.html
@@ -138,7 +138,10 @@ permalink: /weed_control/
   <div class="col-md-4">
     <h4>Idaho Noxious Weed Book</h4>
     <div class="well">
-      If you are a Latah County resident and would like a free copy of the Idaho Noxious Weed Book, Click <a href="#">Here</a>.
+      {% cloudinary book_thumb /img/noxWeedsBook.png alt="Idaho Noxious Weeds Book" %}
+      <p>
+        If you are a Latah County resident and would like a free copy of the Idaho Noxious Weed Book, Click <a href="#">Here</a>.
+      </p>
     </div>
     <!-- End Weed Book Request -->
   </div>
