--- a/_pages/dept/weed_control/home.html
+++ b/_pages/dept/weed_control/home.html
@@ -138,7 +138,9 @@ permalink: /weed_control/
   <div class="col-md-4">
     <h4>Idaho Noxious Weed Book</h4>
     <div class="well">
-      {% cloudinary book_thumb /img/noxWeedsBook.png alt="Idaho Noxious Weeds Book" %}
+      <a href="#">
+        {% cloudinary book_thumb /img/noxWeedsBook.png alt="Idaho Noxious Weeds Book" %}
+      </a>
       <p>
         If you are a Latah County resident and would like a free copy of the Idaho Noxious Weed Book, Click <a href="#">Here</a>.
       </p>
