--- a/_pages/home.html
+++ b/_pages/home.html
@@ -54,7 +54,7 @@ news: true
         <ul class="list-group">
           <ul class="list-group">
             <li class="list-group-item">
-              <h4>Office hours</h4>
+              <h4>Building Hours</h4>
             </li>
             <li class="list-group-item">
               8:00 a.m. – 5:00 p.m. <br  />
@@ -70,7 +70,6 @@ news: true
                 <strong>Latah County</strong><br />
                 522 S Adams<br />
                 Moscow, ID 83843<br />
-                <abbr title="Phone">P:</abbr> (208) 883-8580
               </address>
             </li>
           </ul>
