Updated about layout.

--- a/_pages/home.html
+++ b/_pages/home.html
@@ -4,16 +4,14 @@ permalink: /
 news: true
 ---
 
-<div class="row" id="aboutRow">
+<div class="row display-flex" id="aboutRow">
   <div id="homeimgL" class="thumbnail col-md-2 col-sm-2 hidden-xs">
     {% cloudinary /img/field.png alt="Wheat Field" %}
   </div>
-  <div class="col-md-8 col-sm-8" id="about">
-    <div class="well">
-      <p class="text-justify">
-        Latah County is located in the northern Idaho panhandle; to the immediate west lies <a href="http://www.co.whitman.wa.us/" target="_blank" rel="noopener">Whitman County</a>, Washington. These counties are referred to as The Palouse, which produces a large share of the wheat, lentils, peas, oats and barley in the United States. The Palouse is home to two major universities, <a href="http://www.uidaho.edu/" target="_blank" rel="noopener">University of Idaho</a> and <a href="http://www.wsu.edu" target="_blank" rel="noopener">Washington State University</a>.  Latah County incorporated cities include Bovill, <a href="http://www.deary-id.com/" target="_blank" rel="noopener">Deary</a>, Genesee, Juliaetta, Kendrick, <a href="http://www.ci.moscow.id.us/" targer="_blank" rel="noopener">Moscow</a>, <a href="http://www.potlatch.com/" target="_blank" rel="noopener">Onaway</a>, <a href="http://www.potlatch.com/" target="_blank" rel="noopener">Potlatch</a> and Troy.  Our unincorporated communities are Avon, Cedar Creek, Farmington, Harvard, Helmer, Howell, Joel, Princeton and Viola.
-      </p>
-    </div>
+  <div class="col-md-8 col-sm-8 well" id="about">
+    <p class="text-justify">
+      Latah County is located in the northern Idaho panhandle; to the immediate west lies <a href="http://www.co.whitman.wa.us/" target="_blank" rel="noopener">Whitman County</a>, Washington. These counties are referred to as The Palouse, which produces a large share of the wheat, lentils, peas, oats and barley in the United States. The Palouse is home to two major universities, <a href="http://www.uidaho.edu/" target="_blank" rel="noopener">University of Idaho</a> and <a href="http://www.wsu.edu" target="_blank" rel="noopener">Washington State University</a>.  Latah County incorporated cities include Bovill, <a href="http://www.deary-id.com/" target="_blank" rel="noopener">Deary</a>, Genesee, Juliaetta, Kendrick, <a href="http://www.ci.moscow.id.us/" targer="_blank" rel="noopener">Moscow</a>, <a href="http://www.potlatch.com/" target="_blank" rel="noopener">Onaway</a>, <a href="http://www.potlatch.com/" target="_blank" rel="noopener">Potlatch</a> and Troy.  Our unincorporated communities are Avon, Cedar Creek, Farmington, Harvard, Helmer, Howell, Joel, Princeton and Viola.
+    </p>
   </div>
   <div id="homeimgR" class="thumbnail col-md-2 col-sm-2 hidden-xs">
     {% cloudinary /img/barn.png alt="Barn" %}
@@ -84,12 +82,12 @@ news: true
               <h4>Social</h4>
             </li>
             <li class="list-group-item">
-                <div class="row text-center">
-                  <a href="https://www.facebook.com/LatahCountyID/" target="_blank" rel="noopener" class="btn"><i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a>
-                  <a href="#" target="_blank" rel="noopener" class="btn disabled"><i class="fa fa-2x fa-twitter" aria-hidden="true"></i></a>
-                  <a href="#" target="_blank" rel="noopener" class="btn disabled"><i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a>
-                  <a href="/contact/" class="btn"><i class="fa fa-2x fa-envelope" aria-hidden="true"></i></a>
-                </div>
+              <div class="row text-center">
+                <a href="https://www.facebook.com/LatahCountyID/" target="_blank" rel="noopener" class="btn"><i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a>
+                <a href="#" target="_blank" rel="noopener" class="btn disabled"><i class="fa fa-2x fa-twitter" aria-hidden="true"></i></a>
+                <a href="#" target="_blank" rel="noopener" class="btn disabled"><i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a>
+                <a href="/contact/" class="btn"><i class="fa fa-2x fa-envelope" aria-hidden="true"></i></a>
+              </div>
             </li>
           </ul>
         </ul>
