--- a/_pages/home.html
+++ b/_pages/home.html
@@ -56,7 +56,7 @@ news: true
             </li>
             <li class="list-group-item">
               8:00 a.m. – 5:00 p.m. <br  />
-              M – F, except for recognized holidays
+              M – F, except for recognized <a href="#holidays" data-toggle="modal">holidays</a>
             </li>
           </ul>
           <ul class="list-group">
@@ -91,6 +91,36 @@ news: true
             </li>
           </ul>
         </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="holidays" tabindex="-1" role="dialog" aria-labelledby="holidaysLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="holidaysLabel">County Holidays</h4>
+      </div>
+      <div class="modal-body">
+        <ul class="list-group text-center">
+          <li class="list-group-item">New Year's Day</li>
+          <li class="list-group-item">Martin Luther King, Jr./Human Rights Day</li>
+          <li class="list-group-item">Presidents' Day</li>
+          <li class="list-group-item">Memorial Day</li>
+          <li class="list-group-item">Independence Day</li>
+          <li class="list-group-item">Labor Day</li>
+          <li class="list-group-item">Columbus Day</li>
+          <li class="list-group-item">Veteran's Day</li>
+          <li class="list-group-item">Thanksgiving Day</li>
+          <li class="list-group-item">Employee Appreciation Day (the day after Thanksgiving)</li>
+          <li class="list-group-item">Christmas Day</li>
+        </ul>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
       </div>
     </div>
   </div>
