--- a/_pages/dept/weed_control/home.html
+++ b/_pages/dept/weed_control/home.html
@@ -138,12 +138,71 @@ permalink: /weed_control/
   <div class="col-md-4">
     <h4>Idaho Noxious Weed Book</h4>
     <div class="well">
-      <a href="#">
+      <a href="http://www.cals.uidaho.edu/edComm/pdf/BUL/BUL816.pdf" download>
         {% cloudinary book_thumb /img/noxWeedsBook.png alt="Idaho Noxious Weeds Book" %}
       </a>
       <p>
-        If you are a Latah County resident and would like a free copy of the Idaho Noxious Weed Book, Click <a href="#">Here</a>.
+        A free copy of the Idaho Noxious Weed Book is available for Latah County residents. A PDF copy is also available.
       </p>
+      <div class="row">
+        <div class="col-md-6">
+          <button class="btn btn-default" href="#bookRequest" data-toggle="modal">Request Copy</button>
+        </div>
+        <div class="col-md-6 text-right">
+          <a class="btn btn-default" href="http://www.cals.uidaho.edu/edComm/pdf/BUL/BUL816.pdf" download>Download PDF</a>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="bookRequest" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" id="bookRequest">
+              Idaho Noxious Weed Book
+            </h4>
+          </div>
+          <div class="modal-body">
+            <form class="form-horizontal well" id="contact" name="bookRequest" netlify-honeypot="bot-field" action="thank-you" netlify>
+              <div class="form-group">
+                <label for="name" class="control-label">Name</label>
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                  <input type="text" class="form-control" id="name" name="Name:" placeholder="Name" required />
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="email" class="control-label">Email</label>
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                  <input type="email" class="form-control" id="email" name="email" placeholder="Email" required multiple />
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="phone" class="control-label">Phone</label>
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                  <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone" />
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="address" class="control-label">Address</label>
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                  <textarea rows="4" class="form-control" id="address" name="address" placeholder="Enter address here..." required></textarea>
+                </div>
+              </div>
+              <div class="form-group">
+                <input class="btn btn-info" type="submit" value="Send">
+              </div>
+              <input type="text" name="_gotcha" style="display:none" />
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- End Weed Book Request -->
   </div>
