--- a/_pages/dept/weed_control/home.html
+++ b/_pages/dept/weed_control/home.html
@@ -163,7 +163,7 @@ permalink: /weed_control/
             </h4>
           </div>
           <div class="modal-body">
-            <form class="form-horizontal well" id="contact" name="bookRequest" netlify-honeypot="bot-field" action="thank-you" netlify>
+            <form class="form-horizontal well" id="contact" name="Noxious Weeds Book Request" netlify-honeypot="_gotcha" action="thank-you" netlify>
               <div class="form-group">
                 <label for="name" class="control-label">Name</label>
                 <div class="input-group">
@@ -175,21 +175,21 @@ permalink: /weed_control/
                 <label for="email" class="control-label">Email</label>
                 <div class="input-group">
                   <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Email" required multiple />
+                  <input type="email" class="form-control" id="email" name="Email" placeholder="Email" required multiple />
                 </div>
               </div>
               <div class="form-group">
                 <label for="phone" class="control-label">Phone</label>
                 <div class="input-group">
                   <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-                  <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone" />
+                  <input type="tel" class="form-control" id="phone" name="Phone" placeholder="Phone" />
                 </div>
               </div>
               <div class="form-group">
                 <label for="address" class="control-label">Address</label>
                 <div class="input-group">
                   <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                  <textarea rows="4" class="form-control" id="address" name="address" placeholder="Enter address here..." required></textarea>
+                  <textarea rows="4" class="form-control" id="address" name="Address" placeholder="Enter address here..." required></textarea>
                 </div>
               </div>
               <div class="form-group">
@@ -199,7 +199,7 @@ permalink: /weed_control/
             </form>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
           </div>
         </div>
       </div>
