--- a/_pages/officials/home.html
+++ b/_pages/officials/home.html
@@ -41,7 +41,7 @@ permalink: /officials/
       <h1 class="text-center"><small>Assessor</small></h1>
     </a>
     <a href="{{ official.bio }}">
-      <img class=" img img-responsive center-block hidden-xs" src="{{ official.image }}">
+      {% cloudinary officials_thumb {{ official.image }} alt="{{ official.name }} - {{ official.department }}" %}
       <h3 class="text-center">{{ official.name }}</h3>
     </a>
     <p class="text-justify">
@@ -103,7 +103,7 @@ permalink: /officials/
       <h1 class="text-center"><small>Sheriff</small></h1>
     </a>
     <a href="{{ official.bio }}">
-      <img class=" img img-responsive center-block hidden-xs" src="{{ official.image }}">
+      {% cloudinary officials_thumb {{ official.image }} alt="{{ official.name }} - {{ official.department }}" %}
       <h3 class="text-center">{{ official.name }}</h3>
     </a>
     <p class="text-justify">
@@ -118,7 +118,7 @@ permalink: /officials/
       <h1 class="text-center"><small>Treasurer</small></h1>
     </a>
     <a href="{{ official.bio }}">
-      <img class=" img img-responsive center-block hidden-xs" src="{{ official.image }}">
+      {% cloudinary officials_thumb {{ official.image }} alt="{{ official.name }} - {{ official.department }}" %}
       <h3 class="text-center">{{ official.name }}</h3>
     </a>
     <p class="text-justify">
