--- a/_pages/home.html
+++ b/_pages/home.html
@@ -63,18 +63,22 @@ news: true
             <li class="list-group-item">
               <h4>Address</h4>
             </li>
-            <li class="list-group-item">
+            <li class="list-group-item text-center">
+              <strong>Latah County Courthouse</strong><br />
               <address>
-                <strong>Latah County</strong><br />
                 522 S Adams<br />
                 Moscow, ID 83843<br />
               </address>
             </li>
-          </ul>
-          <ul class="list-group">
-            <li class="list-group-item">
-              See <a href="http://www.latah.id.us/contact.php" class="link">Contact Us</a> page for department listings.
-              Map to Latah County Courthouse
+            <li class="list-group-item text-center">
+              <strong>Latah County Annex</strong><br />
+              <address>
+                200 S Almon<br />
+                Moscow, ID 83843<br />
+              </address>
+            </li>
+            <li class="list-group-item text-center">
+              <button type="button" class="btn btn-default" data-toggle="modal" data-target="#mapBox">Map</button>
             </li>
           </ul>
           <ul class="list-group">
@@ -126,9 +130,37 @@ news: true
   </div>
 </div>
 
+<div class="modal fade" id="mapBox" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="mapBoxTitle">Map</h4>
+      </div>
+      <div class="modal-body">
+        <div class="text-center" id="maps"></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script type="text/javascript">
 //args contains the list of control elements that needs to be examined
 const args = ['homeNews', 'homeNotice'];
 //pass in the args array and the department
 getNewsandNotices(args, "home")
+</script>
+
+<script>
+  $(document).ready(function(){
+    $("address").each(function(){
+      var embed ="<iframe width='100%' height='400' frameborder='0' scrolling='no'  marginheight='0' marginwidth='0' src='https://maps.google.com/maps?&amp;q="+ encodeURIComponent( $(this).text() ) +"&amp;output=embed'></iframe>";
+      var address =$(this).text()
+      $("#maps").append(
+        '<p><h4>' + address + '</h4>' + embed) + '</p>';
+    });
+  })
 </script>
