Added contactBlock to page.

--- a/_pages/dept/auditor/home.html
+++ b/_pages/dept/auditor/home.html
@@ -40,6 +40,7 @@ news: true
 	</div>
 <!-- Right Column -->
 	<div class="col-md-4">
+		{% include contactBlock.html %}
 		<!-- Services -->
 		<div class="panel panel-default">
 			<div class="panel-heading">
