--- a/_pages/dept/district_court/home.html
+++ b/_pages/dept/district_court/home.html
@@ -34,6 +34,7 @@ permalink: /district_court/
   <!-- End Left Pane -->
   <!-- Right Pane -->
   <div class="col-md-4">
+    {% include contactBlock.html %}
     <!-- Services -->
     <div class="panel panel-default">
       <div class="panel-heading">
