--- a/_pages/dept/solid_waste/home.html
+++ b/_pages/dept/solid_waste/home.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Solid Waste Department
+title: Solid Waste
 permalink: /solid_waste/
 tree: true
 news: true
@@ -74,8 +74,9 @@ news: true
 		</div>
 	</div>
 
-	<!-- Services -->
 	<div class="col-md-4">
+		{% include contactBlock.html %}
+		<!-- Services -->
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h3 class="text-center">Our Services</h3>
