--- a/_pages/dept/surveyor/home.html
+++ b/_pages/dept/surveyor/home.html
@@ -23,8 +23,9 @@ permalink: /surveyor/
     </div>
   </div>
   <!-- End Description -->
-  <!-- Services -->
   <div class="col-md-4">
+    {% include contactBlock.html %}
+    <!-- Services -->
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="text-center">Our Services</h4>
