--- a/_pages/dept/weed_control/home.html
+++ b/_pages/dept/weed_control/home.html
@@ -121,6 +121,7 @@ permalink: /weed_control/
   <!-- End Left Pane -->
   <!-- Right Pane -->
   <div class="col-md-4">
+    {% include contactBlock.html %}
     <!-- Services -->
     <div class="panel panel-default">
       <div class="panel-heading">
