--- a/_pages/dept/auditor/elections/home.html
+++ b/_pages/dept/auditor/elections/home.html
@@ -16,6 +16,7 @@ calendar: true
 
   </div>
   <div class="col-md-4">
+    {% include contactBlock.html %}
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="text-center">Upcoming</h4>
