--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -70,6 +70,7 @@ tree: true
 	<!-- End Procedings -->
 	<!-- Links -->
   <div class="col-md-4">
+		{% include contactBlock.html %}
   	<div class="panel panel-default">
   		<div class="panel-heading">
 				<h4 class="text-center">Links</h4>
