--- a/_pages/dept/coroner/home.html
+++ b/_pages/dept/coroner/home.html
@@ -145,6 +145,7 @@ permalink: /coroner/
   <!-- End Left Pane -->
   <!-- Right Pane -->
   <div class="col-md-4">
+    {% include contactBlock.html %}
     <!-- Services -->
     <div class="panel panel-default">
       <div class="panel-heading">
