--- a/_pages/dept/dmv/home.html
+++ b/_pages/dept/dmv/home.html
@@ -38,32 +38,32 @@ news: true
     </div>
     <!-- end notices and news -->
   </div> <!-- class="col-md-8" -->
-
+  <div class="col-md-4">
+    {% include contactBlock.html %}
     <!-- services -->
-    <div class="col-md-4">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="text-center">Our Services</h3>
-        </div>
-        <div class="list-group">
-          <li class="list-group-item text-center">Title Transfers & Registration</li>
-          <li class="list-group-item text-center">Vehicle Identification Inspections</li>
-          <li class="list-group-item text-center">Sales Tax Collection</li>
-        </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="text-center">Our Services</h3>
       </div>
+      <div class="list-group">
+        <li class="list-group-item text-center">Title Transfers & Registration</li>
+        <li class="list-group-item text-center">Vehicle Identification Inspections</li>
+        <li class="list-group-item text-center">Sales Tax Collection</li>
+      </div>
+    </div>
 
-      <!-- additional information -->
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="text-center">Additional Information</h3>
-        </div>
-           <div class="list-group">
-            <a href="vehicleregfaq.html" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Vehicle Registration & Titles FAQ</a>
-            <a href="salestaxfaq.html" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Sales Tax on Vehicles FAQ</a>
-            <a href="http://itd.idaho.gov/itddmv" class="list-group-item list-link text-center" target="_blank">Idaho Department of Transportation</a>
-          </div>
+    <!-- additional information -->
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="text-center">Additional Information</h3>
       </div>
-    </div> <!-- class="col-md-4" -->
+          <div class="list-group">
+          <a href="vehicleregfaq.html" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Vehicle Registration & Titles FAQ</a>
+          <a href="salestaxfaq.html" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Sales Tax on Vehicles FAQ</a>
+          <a href="http://itd.idaho.gov/itddmv" class="list-group-item list-link text-center" target="_blank">Idaho Department of Transportation</a>
+        </div>
+    </div>
+  </div> <!-- class="col-md-4" -->
 </div>
 
 <!-- modal object -->
