--- a/_pages/dept/driver_licensing/home.html
+++ b/_pages/dept/driver_licensing/home.html
@@ -42,6 +42,7 @@ permalink: /driver_licensing/
   <!-- End Left Pane -->
   <!-- Right Pane -->
   <div class="col-md-4">
+    {% include contactBlock.html %}
     <!-- Services -->
     <div class="panel panel-default">
       <div class="panel-heading">
