--- a/_pages/dept/historical_society/home.html
+++ b/_pages/dept/historical_society/home.html
@@ -28,12 +28,13 @@ permalink: /historical_society/
 		</div>
 	</div>
 	<!-- End Description -->
-	<!-- Website -->
 	<div class="col-md-4">
+	{% include contactBlock.html %}
+	<!-- Website -->
   	<div class="panel panel-default">
   		<div class="panel-heading">
-				<h4 class="text-center">Visit Our Website</h4>
-			</div>
+			<h4 class="text-center">Visit Our Website</h4>
+		</div>
   		<div class="list-group text-center">
       	<a href="http://www.latahcountyhistoricalsociety.org/" rel="noopener" target="_blank" class="list-group-item">Latah County Historical Society Web Site</a>
     	</div>
