--- a/_pages/dept/parks_rec/home.html
+++ b/_pages/dept/parks_rec/home.html
@@ -109,6 +109,7 @@ permalink: /parks_rec/
   <!-- End Left Pane -->
   <!-- Right Pane -->
   <div class="col-md-4">
+    {% include contactBlock.html %}
     <!-- Services -->
     <div class="panel panel-default">
       <div class="panel-heading">
