--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -17,8 +17,9 @@ util: true
 		</div>
 	</div>
 	<!-- End Description -->
-	<!-- Services -->
 	<div class="col-md-4">
+	{% include contactBlock.html %}
+	<!-- Services -->
   	<div class="panel panel-default">
   		<div class="panel-heading">
 				<h4 class="text-center">Our Services</h4>
