--- a/_pages/dept/probation/home.html
+++ b/_pages/dept/probation/home.html
@@ -260,6 +260,7 @@ permalink: /probation/
   <!-- End Left Pane -->
   <!-- Right Pane -->
   <div class="col-md-4">
+    {% include contactBlock.html %}
     <!-- Services -->
     <div class="panel panel-default">
       <div class="panel-heading">
