--- a/_pages/dept/veterans_services/home.html
+++ b/_pages/dept/veterans_services/home.html
@@ -22,6 +22,7 @@ permalink: /veterans_services/
   <!-- End Left Pane -->
   <!-- Right Pane -->
   <div class="col-md-4">
+    {% include contactBlock.html %}
     <!-- Services -->
     <div class="panel panel-default">
       <div class="panel-heading">
