Added Court Assistance Office page, tweaked services header size, added overflow ellipse on list boxes

--- a/_pages/dept/weed_control/home.html
+++ b/_pages/dept/weed_control/home.html
@@ -125,7 +125,7 @@ permalink: /weed_control/
     <!-- Services -->
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h4 class="text-center">Our Services</h4>
+        <hd class="text-center">Our Services</hd>
       </div>
       <div class="list-group">
         <li class="list-group-item">Inspecting Lands for Compliance</li>
