Update Contact Page. Added update map on select.

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -22,8 +22,7 @@ contacts: true
   </div>
 </div>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3 hidden-xs">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2734.738297424969!2d-116.99893478399314!3d46.730623079136336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54a0277bd303d061%3A0xabbe5e1cd02270d1!2s522+S+Adams+St%2C+Moscow%2C+ID+83843!5e0!3m2!1sen!2sus!4v1490107744832" width="550" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <div class="col-md-6 col-md-offset-3 hidden-xs" id="deptMap">
   </div>
   <div class="visible-xs">
     <div class="col-xs-4 col-xs-push-4">
@@ -33,4 +32,16 @@ contacts: true
 </div>
 <script>
   deptBox();
+  deptMap();
 </script>
+
+
+<!-- 
+  
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2734.738297424969!2d-116.99893478399314!3d46.730623079136336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54a0277bd303d061%3A0xabbe5e1cd02270d1!2s522+S+Adams+St%2C+Moscow%2C+ID+83843!5e0!3m2!1sen!2sus!4v1490107744832" width="550" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=522%20S%20Adams%2C%20Moscow%2C%20ID%2083843&key=AIzaSyAkJO7M6I1XZdLAAcCbrGUHXYke4Bu_bd8" allowfullscreen></iframe>
+
+  <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/directions?origin=...&destination=522+S+Adams,+Moscow,+ID+83843&key=AIzaSyAkJO7M6I1XZdLAAcCbrGUHXYke4Bu_bd8" allowfullscreen></iframe> 
+
+ -->
