Added services content for BG, PA, CAO, Probation, changed H4 to H3, and centered text

--- a/_pages/dept/court_assisstance/home.html
+++ b/_pages/dept/court_assisstance/home.html
@@ -68,13 +68,13 @@ tree: true
             <div class="panel-heading">
               <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                  Standard Civil Court Forms
+                  Standard Assistance Forms and Instructions
                 </a>
               </h4>
             </div>
             <div id="collapseThree" class="collapse">
               <div class="panel-body">
-                <a href="https://www.courtselfhelp.idaho.gov">Court Self Help</a> and <a href="https://www.adaweb.net">Ada Web</a>.
+                <a href="https://www.courtselfhelp.idaho.gov">Court Self Help</a>
               </div>
             </div>
           </div>
