--- a/_pages/dept/probation/home.html
+++ b/_pages/dept/probation/home.html
@@ -267,13 +267,14 @@ permalink: /probation/
         <h3 class="text-center">Our Services</h3>
       </div>
       <div class="list-group">
-        <li class="list-group-item">Plat Checking</li>
-        <li class="list-group-item">Land Division legal description approval</li>
-        <li class="list-group-item">Corrections to legal descriptions for the Latah County Assessor's Office</li>
-        <li class="list-group-item">Public assistance for private surveyors</li>
-        <li class="list-group-item">Corner dispute and evidence evaluation</li>
-        <li class="list-group-item">Maintain survey records</li>
-        <li class="list-group-item">Corner maintenance</li>
+        <li class="list-group-item text-center">Adult Misdemeanor Probation</li>
+        <li class="list-group-item text-center">Juvenile Probation</li>
+        <li class="list-group-item text-center">Mental Health Assessment and Treatment</li>
+        <li class="list-group-item text-center">Moral Reconation Therapy</li>
+        <li class="list-group-item text-center">Restitution and Work Program</li>
+        <li class="list-group-item text-center">Substance Abuse Assessment and Treatment</li>
+        <li class="list-group-item text-center">Youth Advocacy</li>
+        <li class="list-group-item text-center">Victim Offender Mediation</li>
       </div>
     </div>
     <!-- End Services -->
