--- a/_pages/dept/prosecutor/home.html
+++ b/_pages/dept/prosecutor/home.html
@@ -67,13 +67,10 @@ permalink: /prosecutor/
         <h3 class="text-center">Our Services</h3>
       </div>
       <div class="list-group">
-        <li class="list-group-item">Plat Checking</li>
-        <li class="list-group-item">Land Division legal description approval</li>
-        <li class="list-group-item">Corrections to legal descriptions for the Latah County Assessor's Office</li>
-        <li class="list-group-item">Public assistance for private surveyors</li>
-        <li class="list-group-item">Corner dispute and evidence evaluation</li>
-        <li class="list-group-item">Maintain survey records</li>
-        <li class="list-group-item">Corner maintenance</li>
+        <li class="list-group-item text-center">Child Protection Cases</li>        
+        <li class="list-group-item text-center">Involuntary Mental Hospitalizations</li>
+        <li class="list-group-item text-center">Juvenile Cases</li>
+        <li class="list-group-item text-center">Misdemeanor and Infractions Cases</li>
       </div>
     </div>
     <!-- End Services -->
