--- a/_pages/dept/building_grounds/home.html
+++ b/_pages/dept/building_grounds/home.html
@@ -26,14 +26,14 @@ permalink: /building_grounds/
     <!-- Services -->
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h4 class="text-center">Services</h4>
+        <h3 class="text-center">Our Services</h3>
       </div>
       <div class="list-group">
-        <li class="list-group-item">Add Service</li>
-        <li class="list-group-item">Add Service</li>
-        <li class="list-group-item">Add Service</li>
-        <li class="list-group-item">Add Service</li>
-        <li class="list-group-item">Add Service</li>
+        <li class="list-group-item text-center">Housekeeping</li>
+        <li class="list-group-item text-center">Building Maintenance</li>
+        <li class="list-group-item text-center">Recycling</li>
+        <li class="list-group-item text-center">Mail Retrieval and Delivery</li>
+        <li class="list-group-item text-center">Snow Removal</li>
       </div>
     </div>
     <!-- End Services -->
