--- a/_pages/dept/court_assisstance/home.html
+++ b/_pages/dept/court_assisstance/home.html
@@ -30,7 +30,7 @@ tree: true
 
             <div id="collapseOne" class="collapse">
               <div class="panel-body">
-                Court Assistance Office forms and instructions are available in the forms section and on the web at <a href="https://www.courtselfhelp.idaho.gov">Court Self Help</a> and <a href="https://www.adaweb.net">Ada Web</a>. You can also obtain contact information for other Court Assistance Offices in the state on the website.
+                Court Assistance Office forms and instructions are available in the forms section and on the web at <a href="https://courtselfhelp.idaho.gov">Court Self Help</a> and <a href="https://www.adaweb.net">Ada Web</a>. You can also obtain contact information for other Court Assistance Offices in the state on the website.
                 If telephone assistance is needed immediately, Ada County Court Assistance Office hours are 8:00 a.m. - 5:00 p.m. MST. They can be reached at (208) 287-6963 or (208) 287-6944.
                 You may also contact us with questions and you will receive a response after the office reopens.
               </div>
