fix for court self help link

--- a/_pages/dept/court_assisstance/home.html
+++ b/_pages/dept/court_assisstance/home.html
@@ -74,7 +74,7 @@ tree: true
             </div>
             <div id="collapseThree" class="collapse">
               <div class="panel-body">
-                <a href="https://www.courtselfhelp.idaho.gov">Court Self Help</a>
+                <a href="https://courtselfhelp.idaho.gov">Court Self Help</a>
               </div>
             </div>
           </div>
