--- a/_pages/dept/dmv/home.html
+++ b/_pages/dept/dmv/home.html
@@ -66,33 +66,7 @@ news: true
   </div> <!-- class="col-md-4" -->
 </div>
 
-<!-- modal object -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog">
-	<div class="modal-dialog modal-lg" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				<h4 class="modal-title"></h4>
-			</div>
-			<div class="modal-body" id="myModalDiv">
-				<p>&hellip;</p>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-			</div>
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-
-<script>
-$(document).ready(function(){
-	$("#myModal").on("show.bs.modal", function(e){
-		var link = $(e.relatedTarget);
-		$(this).find(".modal-title").text(e.relatedTarget.innerText);
-		$(this).find(".modal-body").load(link.attr("href"));
-	});
-});
-</script>
+{% include modalPopup.html %}
 
 <script type="text/javascript">
 //args contains the list of control elements that needs to be examined
