--- a/_pages/dept/sheriff/emailNotification.html
+++ b/_pages/dept/sheriff/emailNotification.html
@@ -2,13 +2,55 @@
 permalink: /sheriff/emailNotification
 ---
 
-<div class="panel panel-default" >
-  <div class="panel-heading">
-    <h3 class="panel-title">Press Release Notification</h3>
-  </div>
-  <div class="panel-body">
-    <p>If subscribed to the press release e-mail notification service, you will receive press releases, public service announcements and weekly hot sheet announcements from the Sheriffs Office.</p>
-    <p>Please enter your e-mail address in the box below, select subscribe or unsubscribe and then select the Send Request button.</p>
+
+<form class="form-horizontal well" id="emailSubscription" name="Email Subscription">
+  <div class="form-group">
+    <p>If subscribed to the press release email notification service, you will receive press releases, public service announcements and weekly hot sheet announcements from the Sheriffs Office.</p>
+    <p>Please enter you email address in the box below, select subscribe or unsubscribe and then select the Send Request button.</p>
+
+    <div class="input-group">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+      <input type="email" class="form-control" id="email" name="Email" placeholder="Email" required multiple />
+    </div>
 
   </div>
+  <div class="form-group">
+      <div class="row-sm-offset-2 col-sm-10">
+    <div class="input-group">
+      <label class="radio-inline">
+        <input type="radio" name="emailSubscription" id="radio1" value="subscribe" checked>
+        Subscribe
+      </label>
+
+      <label class="radio-inline">
+        <input type="radio" name="emailSubscription" id="radio2" value="unsubscribe">
+        Unsubscribe
+      </label>
+    </div>
+  </div>
 </div>
+
+  <div class="form-group">
+    <div class="row-sm-offset-2 col-sm-10">
+      <div class="input-group">
+        <input class="btn btn-info" type="submit" value="Send Request">
+      </div>
+    </div>
+  </div>
+
+</form>
+
+<script text/javascript>
+
+$(document).ready(function(){
+  console.log('emailNotification Ready');
+    $("#emailSubscription").submit(function(event) {
+          console.log("Submit button clicked");
+          var email = $('input[name=Email]').val();
+          var subscribeFlag = $('input[name=emailSubscription]:checked').val();
+          console.log(email, subscribeFlag);
+          event.preventDefault();
+    });
+  });
+
+</script>
