--- a/_pages/dept/sheriff/home.html
+++ b/_pages/dept/sheriff/home.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Sheriff
+title: Sheriff Home
 permalink: /sheriff/
 tree: true
 news: true
@@ -8,7 +8,6 @@ news: true
 
 <div class="row">
 	<div class="col-md-8">
-
 		<!-- Department Description -->
 		<div class="col-md-12">
 			<div class="panel panel-default">
@@ -79,7 +78,7 @@ news: true
 	<div class="col-md-4">
 		{% include contactBlock.html %}
 		<!-- Services -->
-		<div class="panel panel-default">
+		<!-- <div class="panel panel-default">
 			<div class="panel-heading">
 				<h3 class="text-center">Our Services</h3>
 			</div>
@@ -95,11 +94,9 @@ news: true
 				<li class="list-group-item text-center">Crime Prevention</li>
 				<li class="list-group-item text-center">Community Service Programs</li>
 			</div>
-		</div>
-
+		</div> -->
 
 		<!-- additional information menu -->
-		<!-- <div class="col-md-4"> -->
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h3 class="text-center">Additional Information</h3>
@@ -108,41 +105,17 @@ news: true
 				<a href="civil.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Civil Office</a>
 				<a href="concealWeapons.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Concealed Weapons Licenses</a>
 				<a href="emailNotification.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Email Notification Service</a>
+				<a href="generalfaq.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Sheriff General FAQ</a>
+				<a href="salesfaq.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Sheriff Sales FAQ</a>
+				<a href="jaildivision.html" data-remote="false" class="list-group-item list-link text-center">Jail Division</a>
 			</div>
 		</div>
 
 	</div>
 </div>
 
+{% include modalPopup.html %}
 
-
-<!-- modal object -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog">
-	<div class="modal-dialog modal-lg" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				<h4 class="modal-title"></h4>
-			</div>
-			<div class="modal-body" id="myModalDiv">
-				<p>&hellip;</p>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-			</div>
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-
-<script>
-$(document).ready(function(){
-	$("#myModal").on("show.bs.modal", function(e){
-		var link = $(e.relatedTarget);
-		$(this).find(".modal-title").text(e.relatedTarget.innerText);
-		$(this).find(".modal-body").load(link.attr("href"));
-	});
-});
-</script>
 
 <script type="text/javascript">
 deptTree("sheriffDir", "Sheriff")
