--- a/_pages/dept/sheriff/home.html
+++ b/_pages/dept/sheriff/home.html
@@ -108,6 +108,13 @@ news: true
 				<a href="generalfaq.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Sheriff General FAQ</a>
 				<a href="salesfaq.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Sheriff Sales FAQ</a>
 				<a href="jaildivision.html" data-remote="false" class="list-group-item list-link text-center">Jail Division</a>
+				<a href="http://gis.latah.id.us/JailRoster/ListNames.aspx" class="list-group-item list-link text-center">Jail Roster</a>
+				<a href="http://www.sheriffalerts.com/cap_main.php?office=55417" class="list-group-item list-link text-center">Sex Offender Search</a>
+				<a href="patrolDivision.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Patrol Division</a>
+				<a href="records.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Records</a>
+				<a href="#" id=recordsRequest data-remote="false" class="list-group-item list-link text-center">Records Request Form</a>
+				<a href="sales.html" data-remote="false" class="list-group-item list-link text-center">Sheriff Sales</a>
+				<a href="https://www.vinelink.com/vinelink/siteInfoAction.do?siteId=13000" data-remote="false" class="list-group-item list-link text-center">VINE (victim notification of offender custody status)</a>
 			</div>
 		</div>
 
@@ -126,4 +133,18 @@ deptTree("sheriffDir", "Sheriff")
 const args = ['sheriffNews', 'sheriffNotice'];
 //pass in the args array and the department
 getNewsandNotices(args, "SO")
+</script>
+
+<script text/javascript>
+	$('#recordsRequest').click(function(){
+			downloadFile('Public-Records-Request-Form.pdf');
+			return false;
+	});
+</script>
+
+<script text/javascript>
+function downloadFile(p){
+				var url = 'https://www.latah.id.us/api/DownloadFileEx?filename=' + p;
+				setTimeout(() => window.open(url, '_blank'), 500);
+			}
 </script>
