--- a/_pages/dept/sheriff/jaildivision.html
+++ b/_pages/dept/sheriff/jaildivision.html
@@ -53,6 +53,9 @@ permalink: /sheriff/jaildivision
 				<a href="#" id="inmateTelephone" class="list-group-item list-link text-center">Inmate Telephone Services</a>
 				<a href="jailLocation.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Jail Location</a>
 				<a href="jailVisitingInfo.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Visiting Information</a>
+				<a href="jailContactInmates.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Contacting Inmates</a>
+				<a href="jailPostingBond.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Posting Bond</a>
+				<a href="jailInspections.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Jail Inspections</a>
 				<a href="/sheriff/" data-remote="false" class="list-group-item list-link text-center">Sheriff Home</a>
 			</div>
 		</div>
