--- a/_pages/dept/sheriff/home.html
+++ b/_pages/dept/sheriff/home.html
@@ -11,8 +11,11 @@ news: true
 		<!-- Department Description -->
 		<div class="col-md-12">
 			<div class="panel panel-default">
-				<p class="panel-body">
-					<img style="float:left;width:250px;height:300px; margin-right:10px;" src={% cloudinary /img/officials/RichardSkiles.png %}</img>
+				<figure style="float:left; padding:0.5em; margin-right:10px; ">
+					<img class="figure-img img-fluid rounded" style="width:250px; height:300px;" src={% cloudinary /img/officials/RichardSkiles.png %}</img>
+					<figcaption class="figure-caption text-center">Sheriff Richard Skiles</figcaption>
+				</figure>
+				<p class="panel-body">					
 					Latah County's elected Sheriff, provides law enforcement, jail, 911 emergency and county-wide dispatch, and search and rescue services to Latah County on a 24-hour, 365-day-a-year basis.
 					In addition, this office provides service of civil papers, drivers' licensing, vehicle identification inspections, concealed weapons permits, road condition reports,
 					crime prevention, and community service programs Monday through Friday during regular business hours. Salvation Army and American Red Cross assitance referrals are made
