--- a/_pages/dept/disaster_services/home.html
+++ b/_pages/dept/disaster_services/home.html
@@ -10,19 +10,40 @@ permalink: /disaster_services/
 </div>
 <div class="col-md-4">
   {% include contactBlock.html %}
-  <div class="panel alert alert-danger">
-    <h3 class="panel-title text-center">Current Weather Alerts</h3>
-  <!-- <div class="alert alert-danger text-center hidden" id="weatherAlertBox"></div> -->
-    <div class="panel-body">
-      <div id="weatherAlertBox">
-        <div id="weatherAlert">
-        </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title text-center">Local Weather</h3>
+    </div>
+    <div class="list-group">
+      <div class="alert alert-danger text-center hidden" id="weatherAlertBox">
+        <h4 class="text-center">Current Weather Alert</h4><br />
+        <div id="weatherAlert"></div>
       </div>
-    </div>    
+      <div class="list-group-item">
+        <div class="row" id="dsWeatherBox"></div>
+      </div>
+      <noscript>Javascript must be enabled to view.</noscript>
+    </div>
   </div>
+
+
+
+
+
+
+  <!-- <div id="weatherAlertBox" class=" alert alert-danger">
+    <div class="panel">
+      <h3 class="panel-title text-center">Current Weather Alerts</h3>
+      <div class="panel-body">
+        <div id="weatherAlert"></div>
+      </div>    
+    </div>
+  </div> -->
 </div>
 
 {% js weatherAlerts.js %}
 <script>
+  dsWeatherBox();
   weatherBoxAlerts();
 </script>
