Updated jekyll assets and changed asset tags.

--- a/_pages/dept/disaster_services/home.html
+++ b/_pages/dept/disaster_services/home.html
@@ -98,7 +98,7 @@ permalink: /disaster_services/
 
 </div>
 
-{% js weatherAlerts.js %}
+{% asset weatherAlerts.js %}
 <script>
   dsWeatherBox();
   weatherBoxAlerts();
