--- a/_pages/home.html
+++ b/_pages/home.html
@@ -155,7 +155,7 @@ getNewsandNotices(args, "home")
 </script>
 
 <!-- Scripts  -->
-{% js maps.js %}
+{% asset maps.js %}
 <!-- Call Script Functions -->
 <script>
   address2Maps()
