--- a/_pages/employment/home.html
+++ b/_pages/employment/home.html
@@ -36,7 +36,7 @@ permalink: /employment/
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/underscore@1.8.3/underscore-min.js"></script>
-{% js employment.js %}
+{% asset employment.js %}
 <script>
   jobsList();
 </script>
