Updated matchHeight for home page settings.

--- a/_pages/home.html
+++ b/_pages/home.html
@@ -18,9 +18,9 @@ news: true
   </div>
 </div>
 <div class="row" id="infoRow">
-  <div class="col-md-8">
+  <div class="col-md-8" id="newsNotices">
   <!-- Notices and News -->
-    <div class="container col-md-6" id="notices">
+    <div class="col-md-6" id="notices">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h3 class="text-center">Notices</h3>
@@ -30,7 +30,7 @@ news: true
         </div>
       </div>
     </div>
-    <div class="container col-md-6" id="news">
+    <div class="col-md-6" id="news">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h3 class="text-center">News</h3>
@@ -43,7 +43,7 @@ news: true
     <!-- end notices and news -->
   </div>
 
-  <div class="container col-md-4" id="contact">
+  <div class="col-md-4" id="contact">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="text-center">Contact</h3>
