Added Treasurer page

--- a/_pages/dept/assessor/home.html
+++ b/_pages/dept/assessor/home.html
@@ -12,6 +12,10 @@ news: true
     <!-- description -->
     <div class="col-md-12">
       <div class="panel panel-default">
+        <figure style="float:left; padding:0.5em; margin-right:10px; ">
+					<img class="figure-img img-responsive rounded" style="width:250px; height:300px;" src={% cloudinary /img/officials/PatrickVaughan.png %}</img>
+					<figcaption class="figure-caption text-center">Assessor Patrick Vaughan</figcaption>
+				</figure>
         <p class="panel-body">
           The appraisal of all property, real and personal, in Latah County is the responsibility of the elected county Assessor. The
           two main purposes of the Assessor are to identify current owners of property and to place a value on property for
