--- a/_pages/dept/auditor/home.html
+++ b/_pages/dept/auditor/home.html
@@ -10,6 +10,10 @@ news: true
 		<!-- Department Description -->
 		<div class="col-md-12">
 			<div class="panel panel-default">
+				<figure style="float:left; padding:0.5em; margin-right:10px; ">
+					<img class="figure-img img-responsive rounded" style="width:250px; height:300px;" src={% cloudinary /img/officials/HenrianneWestberg.png %}</img>
+					<figcaption class="figure-caption text-center">Clerk Henrianne Westberg</figcaption>
+				</figure>
 				<p class="panel-body">
 					Welcome to the Latah County Auditor, Elections and Recorder’s Office. We prepare the county's payroll and manage all accounts receivable and payable. Our Auditing staff also prepares the county's annual budget and its year-end financial reports. We are also the Election’s Office, where we register voters, maintain the database of registered voters, and organize our county, state and national elections. Furthermore, our office records documents associated with property, issues marriage license applications and are agents for executing U.S. Passports.
 				</p>
