--- a/_pages/dept/district_court/home.html
+++ b/_pages/dept/district_court/home.html
@@ -41,11 +41,11 @@ permalink: /district_court/
         <h3 class="text-center">Our Services</h3>
       </div>
       <div class="list-group">
-        <li class="list-group-item">Need List</li>
-        <li class="list-group-item">Need List</li>
-        <li class="list-group-item">Need List</li>
-        <li class="list-group-item">Need List</li>
-        <li class="list-group-item">Need List</li>
+        <li class="list-group-item text-center" >Court Document Processing and Retention</li>
+        <li class="list-group-item text-center">Clerk Services for Court Proceedings</li>
+        <li class="list-group-item text-center">Accounting</li>
+        <li class="list-group-item text-center">Juror Management</li>
+        <li class="list-group-item text-center">Appeal Records Preparation</li>
       </div>
     </div>
     <!-- End Services -->
