--- a/_pages/dept/prosecutor/home.html
+++ b/_pages/dept/prosecutor/home.html
@@ -10,6 +10,10 @@ permalink: /prosecutor/
     <!-- Department Description -->
     <div class="">
       <div class="panel panel-default">
+        <figure style="float:left; padding:0.5em; margin-right:10px; ">
+					<img class="figure-img img-responsive rounded" style="width:250px; height:300px;" src={% cloudinary /img/officials/BillThompson.png %}</img>
+					<figcaption class="figure-caption text-center">Prosecutor Bill Thompson</figcaption>
+				</figure>
         <div class="panel-body text-justify">
           <p>
             The elected Prosecuting Attorney defends or prosecutes actions, applications, or motions in the District Court or Magistrate's division in which the People, the State or the County is a party. Along with the Sheriff, the Prosecutor functions as the chief law enforcement officer in Latah County. The Prosecuting Attorney is also the legal counsel for the Board of County Commissioners, as well as other elected officials and appointed boards and commissions of the county.
@@ -67,7 +71,7 @@ permalink: /prosecutor/
         <h3 class="text-center">Our Services</h3>
       </div>
       <div class="list-group">
-        <li class="list-group-item text-center">Child Protection Cases</li>        
+        <li class="list-group-item text-center">Child Protection Cases</li>
         <li class="list-group-item text-center">Involuntary Mental Hospitalizations</li>
         <li class="list-group-item text-center">Juvenile Cases</li>
         <li class="list-group-item text-center">Misdemeanor and Infractions Cases</li>
