Updated panel titles.

--- a/_pages/home.html
+++ b/_pages/home.html
@@ -23,7 +23,7 @@ news: true
     <div class="col-md-6" id="notices">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="text-center">Notices</h3>
+          <div class="panel-title text-center">Notices</div>
         </div>
         <div class="list-group">
           <div id="homeNotice" ></div>
@@ -33,7 +33,7 @@ news: true
     <div class="col-md-6" id="news">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="text-center">News</h3>
+          <div class="panel-title text-center">News</div>
         </div>
         <div class="list-group">
           <div id="homeNews" ></div>
@@ -46,7 +46,7 @@ news: true
   <div class="col-md-4" id="contact">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="text-center">Contact</h3>
+        <div class="panel-title text-center">Contact</div>
       </div>
       <div class="panel-body">
         <ul class="list-group">
